# zed2i_ros2_description

./: CMakeLists.txt  README.md  package.xml
launch/: zed2i_camera_model_view.rviz  zed_camera.launch.py
model/: zed2i_urdf.xacro
